--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,13 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:typescript-eslint/recommended",
     "plugin:import/typescript",
     "prettier"
   ],
   "plugins": [
     "import",
-    // "@typescript-eslint",
+    "typescript-eslint",
     "prettier"
   ],
   "rules": {
