--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-hook-form": "^7.52.1",
     "react-jazzicon": "1.0.4",
     "sharp": "0.33.3",
-    "typescript-eslint": "^8.1.0",
     "viem": "2.9.27",
     "wagmi": "2.5.22"
   },
@@ -36,6 +35,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "9.1.0",
